# Calculator

./: Dockerfile  LICENSE  README.md  pyproject.toml  test_calculator.py
calculator/: __init__.py  calculator.py
